--- a/.github/workflows/ci2.yml
+++ b/.github/workflows/ci2.yml
@@ -26,3 +26,11 @@ jobs:
       run: chmod +x gradlew
     - name: Build with Gradle
       run: ./gradlew build
+    - name: Build and Push Docker image
+      uses: mr-smithers-excellent/docker-build-push@v5
+      with:
+        image: priyankas06/demo-app
+        registry: docker.io
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+ 
